@@ -1,3 +1,8 @@
+2014-03-22  Carl Hetherington  <cth@carlh.net>
+
+	* Another attempt to fix colour conversion dialog strange behaviour
+	on OS X.
+
 2014-03-18  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.66.3 released.
